[UPDATE] lib, tests, examples.

--- a/package.json
+++ b/package.json
@@ -26,12 +26,21 @@
     "validate.io",
     "validate",
     "validation",
-    "validator"
+    "validator",
+    "valid",
+    "unique",
+    "array",
+    "is",
+    "uniquearray",
+    "isuniquearray",
+    "isunique"
   ],
   "bugs": {
     "url": "https://github.com/validate-io/unique/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "validate.io-array": "^1.0.3"
+  },
   "devDependencies": {
     "chai": "1.x.x",
     "mocha": "1.x.x",
